# llama2

./: .gitignore  LICENSE.md  pyproject.toml  requirements.txt  techstack.md  techstack.yml  tox.ini
src/llama2/: llama2.py  llama2_types.py
tests/: test_llama2.py
