[project]
name = "llama2" 
description = "Llama2" 
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
dependencies = []
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
[tool.setuptools]
package-data = {"llama2" = ["py.typed"]}
[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = "true"
log_cli_level = "DEBUG"